Changed the top position of nav-links:visible, to avoid covering the lower part of the dark mode button.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -163,7 +163,7 @@ nav ul li a:hover {
   flex-direction: column;
   position: absolute;
 
-  top: 60px;
+  top: 65px;
   right: 0;
   width: 100%;
 
